--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,9 @@
 }
 
 /* Header */
-
+.navigate-list {
+  list-style-type: none;
+}
 .navigate-logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
@@ -83,6 +85,9 @@
 
 .title-advantages {
   display: none;
+}
+.title-advantages-list {
+  list-style-type: none;
 }
 .title-advantages-subject {
   font-weight: 700;
