--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@
 .title-advantages {
   display: none;
 }
-.title-advantages-list {
+.advantages-list {
   list-style-type: none;
 }
 .title-advantages-subject {
