--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,9 @@
 /* Section Hero */
 
 .title-hero {
+  margin-top: 0;
+  margin-bottom: 40px;
+
   color: var(--title-text-color);
 
   font-weight: 900;
@@ -147,6 +150,8 @@
 .advantages-list {
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: flex-start;
 
   list-style-type: none;
 }
@@ -181,6 +186,13 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+  display: flex;
+}
+.samples-list .item:not(:last-child) {
+  margin-right: 30px;
+}
+.team-list .item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .title-samples,
@@ -215,6 +227,15 @@
 }
 
 /* Footer */
+
+.footer-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.footer-list .item:not(:last-child) {
+  margin-bottom: 9px;
+}
 
 .footer-adress {
   color: #ffffff;
@@ -254,6 +275,14 @@
   line-height: 1.192;
   text-decoration: none;
 }
+
+.container.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
 /* Portfolio page */
 /* Buttons */
 
@@ -282,12 +311,33 @@
   margin: 0;
   padding: 0;
 }
+.projects-section-button-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.projects-section-button-list .item:not(:last-child) {
+  margin-right: 8px;
+}
 
 /* Section of projects */
 
+.projects-section-title-samples {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.projects-section-title-samples .item {
+  max-width: 370px;
+}
+.projects-section-title-samples .item:nth-child(-n + 3) {
+  margin-bottom: 30px;
+}
 .portfolio-title-samples-subject {
   margin-top: 20px;
   margin-bottom: 4px;
+  padding-left: 24px;
+  padding-right: 24px;
 
   color: var(--title-text-color);
 
@@ -296,9 +346,12 @@
   line-height: 2;
   letter-spacing: 0.06em;
 }
+
 .portfolio-title-samples-text {
   margin-top: 0;
   margin-bottom: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
 
   color: var(--primary-text-color);
 
@@ -312,15 +365,21 @@
   margin-left: auto;
   margin-right: auto;
   outline: 1px solid tomato;
+  padding-right: 15px;
+  padding-left: 15px;
 }
+
 .hero-section,
-.advantages-section,
 .samples-section,
-.team-section,
-.projects-section {
+.team-section {
   padding-top: 94px;
   padding-bottom: 94px;
   text-align: center;
+}
+.advantages-section,
+.projects-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .link-border {
