--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,7 @@
 .container.nav {
   display: flex;
   align-items: center;
+  border: 1px solid #eeeeee;
 }
 
 .navigate-logo {
@@ -371,7 +372,7 @@
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid tomato;
+  /* outline: 1px solid tomato; */
   padding-right: 15px;
   padding-left: 15px;
 }
