--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,9 @@
 
   list-style-type: none;
 }
+.advantages-list .item:not(:last-child) {
+  margin-right: 30px;
+}
 
 .title-advantages {
   display: none;
