--- a/css/styles.css
+++ b/css/styles.css
@@ -329,7 +329,10 @@
 .projects-section-title-samples .content {
   padding-left: 24px;
   padding-right: 24px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   border: 1px solid #eeeeee;
+  border-top: none;
 }
 
 .projects-section-title-samples {
@@ -348,8 +351,14 @@
 .projects-section-title-samples .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
+.span {
+  letter-spacing: 0.03em;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+}
 .portfolio-title-samples-subject {
-  margin-top: 20px;
+  margin-top: 0;
   margin-bottom: 4px;
 
   color: var(--title-text-color);
@@ -362,7 +371,7 @@
 
 .portfolio-title-samples-text {
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 0;
 
   color: var(--primary-text-color);
 
