--- a/css/styles.css
+++ b/css/styles.css
@@ -196,6 +196,7 @@
 .title-advantages-text {
   margin-top: 0;
   margin-bottom: 0;
+  color: var(--primary-text-color);
 
   line-height: 1.71;
 }
@@ -240,6 +241,8 @@
 .title-team-text {
   margin-bottom: 30px;
   margin-top: 0;
+
+  color: var(--primary-text-color);
 
   font-size: 16px;
   line-height: 1.1875;
