--- a/css/styles.css
+++ b/css/styles.css
@@ -410,11 +410,17 @@
   padding-left: 15px;
 }
 
-.hero-section,
 .samples-section,
 .team-section {
   padding-top: 94px;
   padding-bottom: 94px;
+  text-align: center;
+}
+.hero-section {
+  padding-top: 200px;
+  padding-bottom: 280px;
+  padding-left: 130px;
+  padding-right: 130px;
   text-align: center;
 }
 .advantages-section,
