--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,40 @@ p {
 }
 
 /* Header */
+.navigate-studio::after,
+.navigate-portfolio::after,
+.navigate-contacts::after {
+  content: '';
+  display: block;
+  position: absolute;
+  background: var(--accent-color);
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+  bottom: -1px;
+  opacity: 0;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.navigate-studio:hover::after,
+.navigate-contacts:hover::after,
+.navigate-portfolio:hover::after {
+  opacity: 1;
+}
+/* .current-page {
+  display: block;
+  position: absolute;
+  background: var(--accent-color);
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+} */
+.navigate-studio,
+.navigate-contacts,
+.navigate-portfolio {
+  position: relative;
+}
+
 .header {
   border-bottom: 1px solid #eeeeee;
   background-color: var(--white-color);
@@ -108,6 +142,8 @@ p {
   padding-top: 32px;
   padding-bottom: 32px;
   color: var(--primary-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navigate-studio,
 .navigate-portfolio,
@@ -151,6 +187,55 @@ p {
 
 /* Section Hero */
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 528px;
+  height: 581px;
+  transform: translate(-50%, -50%);
+
+  background: var(--white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  border-radius: 50%;
+  border-color: rgba(0, 0, 0, 0.1);
+  background-color: white;
+  color: #000000;
+  height: 30px;
+  width: 30px;
+  justify-content: center;
+}
+.close-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  color: currentColor;
+}
+
 .title-hero {
   margin-bottom: 40px;
 
@@ -179,11 +264,6 @@ p {
 
   cursor: pointer;
 }
-/* .hero-button:hover,
-.hero-button:focus {
-  background-color: var(--accent-color);
-  color: var(--white-color);
-} */
 
 /* Section Advantages */
 
@@ -238,6 +318,28 @@ p {
 
 /* Section Samples,Team */
 
+.image-container {
+  position: relative;
+}
+.image-description {
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  bottom: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  background: rgba(47, 48, 58, 0.8);
+}
+.text-description {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-color);
+}
+
 .samples-list,
 .team-list {
   display: flex;
@@ -271,18 +373,16 @@ p {
   height: 44px;
   width: 44px;
   padding: 12px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .circle-team:hover,
 .circle-team:focus {
   background-color: var(--accent-color);
   color: var(--white-color);
 }
-/* .social-icon-team:hover {
-  fill: var(--white-color);
-}
-.social-icon-team:focus {
-  fill: var(--white-color);
-} */
+
 .samples-list .item:not(:last-child) {
   margin-right: 30px;
 }
@@ -355,6 +455,9 @@ p {
   padding-right: 32px;
   padding-left: 32px;
   color: var(--icon-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .rectangle:hover,
 .rectangle:focus {
@@ -363,6 +466,7 @@ p {
 }
 
 /* Footer */
+
 .footer {
   background-color: #2f303a;
   padding-top: 60px;
@@ -379,6 +483,7 @@ p {
   height: 44px;
   width: 44px;
   padding: 12px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .circle:hover,
 .circle:focus {
@@ -435,6 +540,8 @@ p {
   line-height: 1.71;
   text-decoration: none;
   font-style: normal;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-mail,
 .footer-phone {
@@ -442,6 +549,8 @@ p {
   text-decoration: none;
   color: var(--primary-text-color);
   font-style: normal;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-mail:hover,
 .footer-mail:focus {
@@ -467,6 +576,7 @@ p {
 
 /* Portfolio page */
 /* Buttons */
+
 .hidden {
   display: none;
 }
@@ -488,6 +598,10 @@ p {
   line-height: 1.368;
 
   cursor: pointer;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-list-item:hover,
 .button-list-item:focus {
@@ -520,6 +634,47 @@ p {
 
 /* Section of projects */
 
+.image-thumb {
+  position: relative;
+  overflow: hidden;
+}
+.image-thumb:hover .portfolio-image-description {
+  opacity: 1;
+  transform: translateY(0);
+}
+/* .image-thumb::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  top: 0;
+  left: 0;
+
+  padding: 63px 24px;
+  opacity: 0;
+  transform: translateY(100%);
+} */
+.portfolio-image-description {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  top: 0;
+  left: 0;
+
+  padding: 63px 24px;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-image-description-text {
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--white-color);
+}
+
 .projects-section-title-samples .content {
   padding-left: 24px;
   padding-right: 24px;
@@ -532,12 +687,13 @@ p {
 .projects-section-title-samples {
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: space-between; */
 }
 .projects-section-title-samples .item {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .projects-section-title-samples .item:nth-child(3n) {
   margin-right: 0;
